--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@types/node": "^24.2.0",
     "prettier": "^3.2.5",
-    "turbo": "latest"
+    "ts-node": "^10.9.2",
+    "turbo": "latest",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=18"
